Updated to build for RTEMS, linux-x86, and linux-x86_64 Implemented tests for timer accuracy and overhead. Tested on linux platforms Still need to test on RTEMS
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/diagTimer/current@2066 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -24,3 +24,6 @@ ifdef T_A
  -include $(TOP)/configure/O.$(T_A)/CONFIG_APP_INCLUDE
 endif
 
+USR_CXXFLAGS	+= -g
+USR_CFLAGS		+= -g
+STATIC_BUILD	= NO
