Fixed various issues related to using the timer from C Tested accuracy on VME system
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/diagTimer/current@2067 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/testApp/src/Makefile
+++ b/testApp/src/Makefile
@@ -20,7 +20,7 @@ testApp_DBD += diagTimer.dbd
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
 testApp_SRCS += testApp_registerRecordDeviceDriver.cpp
-testApp_SRCS += diagTimerTest.cpp
+testApp_SRCS += diagTimerTest.c
 testApp_SRCS_DEFAULT += testAppMain.cpp
 testApp_SRCS_vxWorks += -nil-
 
