--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -24,6 +24,4 @@ ifdef T_A
  -include $(TOP)/configure/O.$(T_A)/CONFIG_APP_INCLUDE
 endif
 
-USR_CXXFLAGS	+= -g
-USR_CFLAGS		+= -g
-STATIC_BUILD	= NO
+STATIC_BUILD=YES
